fix: remove weird blue rectangle behind attendance button

--- a/assets/rsvp-styles.css
+++ b/assets/rsvp-styles.css
@@ -86,6 +86,10 @@
     right: 50px;
 }
 
+.button.attended-no, .button.attended-unknown {
+    background-color: transparent !important;
+}
+
 .button.attended-unknown:hover,
 .button.attended-no:hover {
     opacity: 0.5;
